--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1747,6 +1747,7 @@
 
 	p {
 		margin: 0 0 2em 0;
+		color: white;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -2958,6 +2959,8 @@
 			-ms-flex-direction: row;
 			flex-direction: row;
 			background-color: #2e3450;
+			padding-top: 1%;
+			padding-bottom: 1%;
 		}
 
 			.spotlights > section > .image {
@@ -2966,6 +2969,8 @@
 				border-radius: 0;
 				display: block;
 				position: relative;
+				margin-right: 1%;
+				margin-left: 1%;
 				width: 30%;
 			}
 
@@ -2973,6 +2978,7 @@
 					border-radius: 0;
 					display: block;
 					width: 100%;
+					height: 100%;
 				}
 
 				.spotlights > section > .image:before {
@@ -3962,3 +3968,12 @@
 			position: static;
 		}
 	}
+
+	body.is-menu-visible #menu .inner {
+ 		-moz-transform: none;
+ 		-webkit-transform: none;
+ 		-ms-transform: none;
+ 		transform: none;
+ 		opacity: 1;
+ 		visibility: visible;
+ 	} 
